@@ -5,7 +5,7 @@
 from browserid.utils import encode_bytes, decode_bytes
 from browserid.utils import encode_json_bytes, decode_json_bytes
 from browserid.utils import get_assertion_info, u
-from browserid.tests.support import unittest
+from browserid.tests.support import unittest, EXPIRED_ASSERTION
 
 
 class TestUtils(unittest.TestCase):
@@ -29,26 +29,8 @@ class TestUtils(unittest.TestCase):
         self.assertRaises(ValueError, encode_json_bytes, [1, 3, 3])
 
     def test_get_assertion_info(self):
-        assertion = """
-        eyJjZXJ0aWZpY2F0ZXMiOlsiZXlKaGJHY2lPaUpTVXpFeU9DSjkuZXlKcGMzTWlPaUppY
-        205M2MyVnlhV1F1YjNKbklpd2laWGh3SWpveE16SXhPVFF4T1Rnek1EVXdMQ0p3ZFdKc2
-        FXTXRhMlY1SWpwN0ltRnNaMjl5YVhSb2JTSTZJbEpUSWl3aWJpSTZJamd4TmpreE5UQTB
-        OVGswTkRVek5EVTFPREF4TlRreU5Ea3hNemsyTkRFNE56RTJNVFUwTkRNNE5EWXdPREl6
-        TXpBMU1USXlPRGN3TURRNE56TTFNREk1TURrek16a3lNRFkzTURFMU1qQTBORGd6TWpVM
-        U56WXdOREE1TnpFeU9EYzNNVGswT1RVek1UQXdNVFEyTkRVek56TTJOakU0TlRVek5EY3
-        hNakkxT0RreU16TTFPRFV4TWpZNU1EQXdOREF5TVRrMk9ERTBNRGtpTENKbElqb2lOalU
-        xTXpjaWZTd2ljSEpwYm1OcGNHRnNJanA3SW1WdFlXbHNJam9pY25saGJrQnlabXN1YVdR
-        dVlYVWlmWDAua19oaEtYMFRCVnUyX2szbV9uRDVOVWJfTktwX19PLTY1MW1CRUl3S1NZZ
-        GlOenQwQm9WRkNEVEVueEhQTWJCVjJaejk0WDgtLVRjVXJidEV0MWV1S1dWdjMtNTFUOU
-        xBZnV6SEhfekNCUXJVbmxkMVpXSmpBM185ZEhQeTMwZzRMSU9YZTJWWmd0T1Nva3MyZFE
-        4ZDNvazlSUTJQME5ERzB1MDBnN3lGejE4Il0sImFzc2VydGlvbiI6ImV5SmhiR2NpT2lK
-        U1V6WTBJbjAuZXlKbGVIQWlPakV6TWpFNU1qazBOelU0TWprc0ltRjFaQ0k2SW1oMGRIQ
-        TZMeTl0ZVdaaGRtOXlhWFJsWW1WbGNpNXZjbWNpZlEuQWhnS2Q0eXM0S3FnSGJYcUNSS3
-        hHdlluVmFJOUwtb2hYSHk0SVBVWDltXzI0TWdfYlU2aGRIMTNTNnFnQy1vSHBpS3BfTGl
-        6cDRGRjlUclBjNjBTRXcifQ
-        """.replace(" ", "").replace("\n", "").strip()
-        data = get_assertion_info(assertion)
-        self.assertEquals(data["principal"]["email"], "ryan@rfk.id.au")
+        data = get_assertion_info(EXPIRED_ASSERTION)
+        self.assertEquals(data["principal"]["email"], "rfkelly@mozilla.com")
         self.assertEquals(data["audience"], "http://myfavoritebeer.org")
         self.assertRaises(ValueError, get_assertion_info, "JUNK")
         self.assertRaises(ValueError, get_assertion_info, "X")
